--- a/styles.css
+++ b/styles.css
@@ -4,39 +4,171 @@ body {
     display: flex;
     flex-direction: column;
     justify-content: center;
+    margin: 0px;
 }
 
+.header , .hero , .card-row , .quote , .cta , .footer{
+    padding-left: 20%;
+    padding-right: 20%;
+}
+
+button{
+    height: 30px;
+    width: 100px;
+    background-color: #3882F6;
+    color: #f9faf8;
+    border: 0;
+    border-radius: 1%;
+}
 /* header */
 .header {
     margin: 0;
     display: flex;
     justify-content: space-between;
-    align-content: center;
+    align-items: center;
     background-color: #1f293c;
+ 
+
 }
 
-.logo{
+.logo {
     font-weight: bold;
-    font-size: 20px;
-    color: white;
+    font-size: 24px;
+    color: #f9faf8;
 }
 
-ul{
+ul {
     display: flex;
+    margin: 0;
+    padding: 0;
     list-style: none;
     gap: 10px;
+    font-size: 18px;
+    color: #f9faf8;
+
 }
 
-a{
+a {
     text-decoration: none;
-    color: white;
+    color: #f9faf8;
 }
+
 /* hero */
+
+.hero {
+    background-color: #1f293c;
+    justify-content: center;
+    align-content: center;
+    color: #f9faf8;
+    display: flex;
+    padding-top: 30px;
+    padding-bottom: 30px;
+}
+
+.dog-img {
+    height: 230px;
+    width: 700px;
+}
+
+.text{
+    text-align: left;
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    flex-wrap: wrap;
+}
+
+.text h1{
+    font-size: 48px;
+    font-weight: 900;
+    color: #f9faf8;
+    margin: 0;
+}
+
+.text p{
+    color: #e5e7eb;
+    font-size: 18px;
+    width: 85%;
+    margin: 3px 0;
+}
 
 /* card-row */
 
+.img-card {
+    height: 150px;
+    width: 150px;
+}
+
+.card-row {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+}
+
+.card-deck{
+    display: flex;
+    justify-content: center;
+    gap: 20px;
+}
+
+.card{
+    display: flex;
+    flex-direction: column;
+    flex-wrap: wrap;
+    justify-content: center;
+    align-items: center;
+}
+
+.img-card{
+    border-radius: 10%;
+}
+
 /* quote */
 
+.quote{
+    background-color: #e5e7eb;
+}
+
+.quote h3{
+    color: #1f2937;
+    font-size: 36px;
+    font-style: italic;
+    font-weight: 100;
+    margin: 30px;
+}
+
+.quote h5{
+    margin: 30px;
+    text-align: right;
+}
 /* cta */
 
+.cta{
+    padding: 3%;
+    color: #e5e7eb;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 20%;
+    text-align: left;
+    background-color: #3882F6;
+    margin: 40px 20%;
+    border-radius: 5px;
+}
+.cta button {
+    border: 2px solid #f9faf8 ;
+}
+
+.cta h3{
+    margin: 0;
+}
+.cta p{
+    margin: 0;
+}
 /* footer */
+
+.footer{
+    background-color: #1f2937;
+    color: #e5e7eb;
+    padding: 10px;
+}
